--- a/public/text.html
+++ b/public/text.html
@@ -1,6 +1,6 @@
 <div className="container">
     <div className="row div col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-        <div className="row">
+        <div className="row g-3">
             <div className="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
               <label for="" className="form-label">Admission No</label>
               <input type="text" className="form-control"/>
