--- a/public/text.html
+++ b/public/text.html
@@ -37,3 +37,21 @@
         </div>
     </div>
 </div>
+<select name="" id="" class="form-control">
+    <option value="pathanamthitta">pathanamthitta</option>
+    <option value="Kannur">Kannur</option>
+    <option value="Kasargodu">Kasargodu</option>
+    <option value="Wayanda">Wayanda</option>
+    <option value="Idukki">Idukki</option>
+    <option value="Kollam">Kollam</option>
+    <option value="Thrissur">Thrissur</option>
+    <option value="Palakkad">Palakkad</option>
+    <option value="Eranakulam">Eranakulam</option>
+    <option value="Alapuzha">Alapuzha</option>
+    <option value="Kozhikode">Kozhikode</option>
+    <option value="Trivandrum">Trivandrum</option>
+    <option value="Malapuram">Malapuram</option>
+    <option value="Kottayam">Kottayam</option>
+</select>
+
+   
